# Unimore-Notes

./: .gitignore  README.md  fix_screenshots.sh  test.py  xopp-converter.sh
ANNO_III/Semestre_II/AI_ML_DL/esercizi/: es-slide-1.py  pyproject.toml
cyberchallenge/: pyproject.toml
cyberchallenge/cft_CCIT/appunti/.obsidian/: workspace.json
cyberchallenge/cft_CCIT/appunti/WEB/: CSRF.md  Code Injection.md  Command Injection.md  PATH_TRAVERSAL.md  SSRF.md  URL ENCODING.md  XSS.md
cyberchallenge/cft_CCIT/crypto/: AES_CBC.txt  DES_flaws.txt  DH.txt  num_theory
cyberchallenge/cft_CCIT/crypto/104/: challenge.py  exploit.py
cyberchallenge/cft_CCIT/crypto/106/: exploit.py
cyberchallenge/cft_CCIT/crypto/107/: exploit.py  see_you.py
cyberchallenge/cft_CCIT/crypto/108/: exploit.py
cyberchallenge/cft_CCIT/crypto/109/: exploit.py  source.py
cyberchallenge/cft_CCIT/crypto/110/: challenge.py  exploit.py
cyberchallenge/cft_CCIT/crypto/111/: challenge.py  exploit.py  exploit_local.py
cyberchallenge/cft_CCIT/crypto/112/: challenge.py  exploit.py
cyberchallenge/cft_CCIT/crypto/113/: challenge.py  exploit.txt
cyberchallenge/cft_CCIT/crypto/114/: challenge.py  exploit.py
cyberchallenge/cft_CCIT/crypto/201_rsa-walkthrough/: exploit.py
cyberchallenge/cft_CCIT/crypto/202_decrypt_me_1/: exploit.py
cyberchallenge/cft_CCIT/crypto/203_decrypt_me_2/: exploit.py
cyberchallenge/cft_CCIT/crypto/204_rs2a/: exploit.py
cyberchallenge/cft_CCIT/crypto/205_oracle_1/: exploit.py
cyberchallenge/cft_CCIT/pwn/: 0_5_piecewise.py
cyberchallenge/cft_CCIT/web/302_camo/: tests.py
(+663 files in other folders)
