[project]
name = "cyberchallenge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "crypto>=1.4.1",
    "fastapi>=0.133.0",
    "mtp>=1.1.0",
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "pwntools>=4.15.0",
    "pycryptodome>=3.23.0",
    "pygnuplot>=0.12.3",
    "requests>=2.32.5",
    "sqlmap>=1.10.2",
    "uvicorn>=0.41.0",
]
