[project]
name = "esercizi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "googledrivedownloader>=1.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "onedrivedownloader>=1.1.3",
    "opencv-python>=4.13.0.92",
    "pyparsing>=3.3.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
